[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlalchemy-load"
version = "0.2.0"
description = "Generate SQLAlchemy query optimization options from simplified field selection syntax"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/sqlalchemy_load"]
